fix navbar position to top

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   </head>
   <body>
     <!-- Hero Section with Navbar -->
-    <div class="hero-bg-img">
-      <div class="hero">
+   
         <nav>
           <a href="#" class="nav-logo"><span>Turbine</span> Solutions</a>
           <ul class="nav-links">
@@ -21,7 +20,44 @@
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
-      </div>
-    </div>
+     <section class="hero"></section>
+   
+  <h1>Lorem ipsum </h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
+      odio provident, repellat autem labore quae ullam sequi itaque cum
+      suscipit.   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
+      odio provident, repellat autem labore quae ullam sequi itaque cum
+      suscipit.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
+      odio provident, repellat autem labore quae ullam sequi itaque cum
+      suscipit.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
+      odio provident, repellat autem labore quae ullam sequi itaque cum
+      suscipit.   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
+      odio provident, repellat autem labore quae ullam sequi itaque cum
+      suscipit.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
+      odio provident, repellat autem labore quae ullam sequi itaque cum
+      suscipit.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
+      odio provident, repellat autem labore quae ullam sequi itaque cum
+      suscipit.   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
+      odio provident, repellat autem labore quae ullam sequi itaque cum
+      suscipit.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
+      odio provident, repellat autem labore quae ullam sequi itaque cum
+      suscipit.
+    </p>
   </body>
 </html>
