--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Turbine Solutions</title>
     <link rel="stylesheet" href="styles.css" />
     <link href="images/icons8-airplane-96.png" rel="icon" />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <!-- Hero Section with Navbar -->
