--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#"><span class="contact-btn">Contact</span></a></li>
           </ul>
         </nav>
      <section class="hero"></section>
