--- a/index.html
+++ b/index.html
@@ -7,58 +7,69 @@
     <title>Turbine Solutions</title>
     <link rel="stylesheet" href="styles.css" />
     <link href="images/icons8-airplane-96.png" rel="icon" />
+
     <script src="script.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/581a84b058.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- Hero Section with Navbar -->
-   
-        <nav>
-          <a href="#" class="nav-logo"><span>Turbine</span> Solutions</a>
-          <ul class="nav-links">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#"><span class="contact-btn">Contact</span></a></li>
-          </ul>
-        </nav>
-     <section class="hero"></section>
-   
-  <h1>Lorem ipsum </h1>
+
+    <nav>
+      <input type="checkbox" id="check" />
+      <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <a href="#" class="nav-logo"><span>Turbine</span> Solutions</a>
+      <div class="nav-links-container">
+      <ul class="nav-links">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+    </nav>
+    <section></section>
+    <section class="hero"></section>
+
+    <h1>Lorem ipsum</h1>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
-      odio provident, repellat autem labore quae ullam sequi itaque cum
-      suscipit.   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
-      odio provident, repellat autem labore quae ullam sequi itaque cum
-      suscipit.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
-      odio provident, repellat autem labore quae ullam sequi itaque cum
-      suscipit.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam blanditiis
+      nihil placeat soluta maxime enim aspernatur ex, aut corporis odio
+      provident, repellat autem labore quae ullam sequi itaque cum suscipit.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam blanditiis
+      nihil placeat soluta maxime enim aspernatur ex, aut corporis odio
+      provident, repellat autem labore quae ullam sequi itaque cum suscipit.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam blanditiis
+      nihil placeat soluta maxime enim aspernatur ex, aut corporis odio
+      provident, repellat autem labore quae ullam sequi itaque cum suscipit.
     </p>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
-      odio provident, repellat autem labore quae ullam sequi itaque cum
-      suscipit.   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
-      odio provident, repellat autem labore quae ullam sequi itaque cum
-      suscipit.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
-      odio provident, repellat autem labore quae ullam sequi itaque cum
-      suscipit.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam blanditiis
+      nihil placeat soluta maxime enim aspernatur ex, aut corporis odio
+      provident, repellat autem labore quae ullam sequi itaque cum suscipit.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam blanditiis
+      nihil placeat soluta maxime enim aspernatur ex, aut corporis odio
+      provident, repellat autem labore quae ullam sequi itaque cum suscipit.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam blanditiis
+      nihil placeat soluta maxime enim aspernatur ex, aut corporis odio
+      provident, repellat autem labore quae ullam sequi itaque cum suscipit.
     </p>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
-      odio provident, repellat autem labore quae ullam sequi itaque cum
-      suscipit.   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
-      odio provident, repellat autem labore quae ullam sequi itaque cum
-      suscipit.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-      blanditiis nihil placeat soluta maxime enim aspernatur ex, aut corporis
-      odio provident, repellat autem labore quae ullam sequi itaque cum
-      suscipit.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam blanditiis
+      nihil placeat soluta maxime enim aspernatur ex, aut corporis odio
+      provident, repellat autem labore quae ullam sequi itaque cum suscipit.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam blanditiis
+      nihil placeat soluta maxime enim aspernatur ex, aut corporis odio
+      provident, repellat autem labore quae ullam sequi itaque cum suscipit.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam blanditiis
+      nihil placeat soluta maxime enim aspernatur ex, aut corporis odio
+      provident, repellat autem labore quae ullam sequi itaque cum suscipit.
     </p>
   </body>
 </html>
