style about us section

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <ul class="nav-links">
           <li><a href="#">About</a></li>
           <li><a href="#">Services</a></li>
-          <li><a href="#">Gallery</a></li>
+          <li><a href="#">Projects</a></li>
           <li>
+            <!-- <button class = 'contact-us-btn'href="#">Contact Us</button> -->
             <a href="#">Contact</a>
           </li>
         </ul>
@@ -37,10 +38,10 @@
     <!-- /navbar  -->
     <section class="hero">
       <div class="hero-text">
-        <h2>The best business information</h2>
-        <p>We're in the business of helping you start your business</p>
+        <h2>At vero eos et accusamus</h2>
+        <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem</p>
       </div>
-      <button class="hero-btn">Get Started</button>
+      <button class="hero-btn">Get In Touch</button>
     </section>
 
     <section id="about-us">
