responive about-us section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turbine Solutions</title>
     <link rel="stylesheet" href="styles.css" />
-    <link href="images/icons8-turbine-60.png" rel="icon" />
+    <link href="images/icons8-airplane-96.png" rel="icon" />
 
     <script src="script.js" defer></script>
     <script
@@ -18,16 +18,19 @@
     <!-- Navbar -->
     <nav>
       <input type="checkbox" id="check" />
-      <label for="check" class="checkbtn"  onclick="changeIcon(this.children[0])">
+      <label
+        for="check"
+        class="checkbtn"
+        onclick="changeIcon(this.children[0])"
+      >
         <i class="fa-solid fa-bars"></i>
-        
       </label>
       <a href="#" class="nav-logo"><span>Turbine</span> Solutions</a>
       <div class="nav-links-container">
         <ul class="nav-links">
           <li><a href="#">About</a></li>
           <li><a href="#">Services</a></li>
-          <li><a href="#">Projects</a></li>
+          <li><a href="#">Gallery</a></li>
           <li>
             <!-- <button class = 'contact-us-btn'href="#">Contact Us</button> -->
             <a href="#">Contact</a>
@@ -66,9 +69,17 @@
           <ul>
             <!-- <i class="fa-solid fa-plane-departure"></i> -->
             <!-- <i class="fa-solid fa-screwdriver-wrench"></i> -->
-            <li><i class="fa-solid fa-check"></i> Aliquid modi labore fuga rem</li>
-            <li><i class="fa-solid fa-check"></i>  Aut quae placeat nisi! Modi alias</li>
-            <li><i class="fa-solid fa-check"></i> deleniti pariatur hic obcaecati. Tenetur, ipsa</li>
+            <li>
+              <i class="fa-solid fa-check"></i> Aliquid modi labore fuga rem
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i> Aut quae placeat nisi! Modi
+              alias
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i> deleniti pariatur hic obcaecati.
+              Tenetur, ipsa
+            </li>
           </ul>
         </div>
       </div>
