changed nav margin

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turbine Solutions</title>
     <link rel="stylesheet" href="styles.css" />
-    <link href="images/icons8-airplane-96.png" rel="icon" />
+    <link href="images/icons/icons8-airplane-96.png" rel="icon" />
 
     <script src="script.js" defer></script>
     <script
@@ -15,7 +15,7 @@
     ></script>
   </head>
   <body>
-    <!-- Navbar -->
+    <!-- Navbar --> 
     <nav>
       <input type="checkbox" id="check" />
       <label
@@ -62,9 +62,7 @@
             Perferendis, laboriosam accusantium aperiam illum mollitia id fugit
             placeat doloribus quam dignissimos. Dolorum ex, voluptatibus rem in
             dolore velit laudantium alias temporibus? Lorem, ipsum dolor sit
-            amet consectetur adipisicing elit. Aliquid modi labore fuga rem,
-            dolorum quos maiores ratione. Aut quae placeat nisi! Modi alias
-            sapiente deleniti pariatur hic obcaecati. Tenetur, ipsa?
+            amet consectetur adipisicing elit. 
           </p>
           <ul>
             <!-- <i class="fa-solid fa-plane-departure"></i> -->
