--- a/index.html
+++ b/index.html
@@ -1,86 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Turbine Solutions</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link href="images/icons/icons8-airplane-96.png" rel="icon" />
-
-    <script src="script.js" defer></script>
-    <script
-      src="https://kit.fontawesome.com/581a84b058.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <!-- Navbar --> 
-    <nav>
-      <input type="checkbox" id="check" />
-      <label
-        for="check"
-        class="checkbtn"
-        onclick="changeIcon(this.children[0])"
-      >
-        <i class="fa-solid fa-bars"></i>
-      </label>
-      <a href="#" class="nav-logo"><span>Turbine</span> Solutions</a>
-      <div class="nav-links-container">
-        <ul class="nav-links">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li>
-            <!-- <button class = 'contact-us-btn'href="#">Contact Us</button> -->
-            <a href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!-- /navbar  -->
-    <section class="hero">
-      <div class="hero-text">
-        <h2>At vero eos et accusamus</h2>
-        <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem</p>
-      </div>
-      <button class="hero-btn">Get In Touch</button>
-    </section>
-
-    <section id="about-us">
-      <h1>About Us</h1>
-      <div class="header-border"></div>
-      <div class="about-us-container">
-        <img
-          src="images/IMG_20191218_135131862.jpg"
-          alt="airplane inside of hangar"
-        />
-        <div class="about-us-info">
-          <h2>Lorem ipsum dolor sit</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perferendis, laboriosam accusantium aperiam illum mollitia id fugit
-            placeat doloribus quam dignissimos. Dolorum ex, voluptatibus rem in
-            dolore velit laudantium alias temporibus? Lorem, ipsum dolor sit
-            amet consectetur adipisicing elit. 
-          </p>
-          <ul>
-            <!-- <i class="fa-solid fa-plane-departure"></i> -->
-            <!-- <i class="fa-solid fa-screwdriver-wrench"></i> -->
-            <li>
-              <i class="fa-solid fa-check"></i> Aliquid modi labore fuga rem
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i> Aut quae placeat nisi! Modi
-              alias
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i> deleniti pariatur hic obcaecati.
-              Tenetur, ipsa
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
 </html>
