--- a/index.html
+++ b/index.html
@@ -6,12 +6,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turbine Solutions</title>
     <link rel="stylesheet" href="/css/main.min.css" />
-    <link href="assets/icons/icons8-airplane-96.png" rel="icon" />
+    <link href="images/icons8-airplane-96.png" rel="icon" />
+    <style>
+      section {
+        padding: 60px 0;
+      }
+    </style>
   </head>
-  <body>
+  <body class="pt-3">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-primary">
+      <div class="container-xxl pt-1 pb-1">
+        <a href="#intro" class="navbar-brand">
+          <span class="fw-bold"> Turbine Solutions </span>
+        </a>
+        <!-- toggle button for mobile nav -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#main-nav"
+          aria-controls="main-nav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <!-- Navbar  logo, about, services, projects, contact -->
+        <!-- navbar links -->
+        <div
+          class="
+            collapse
+            navbar-collapse
+            justify-content-end
+            align-center
+            pt-1
+            pb-1
+          "
+          id="main-nav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="#about" class="nav-link">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a href="#services" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="#projects" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item d-md-none">
+              <a href="#contact" class="nav-link">Contact Us</a>
+            </li>
+            <li class="nav-item ms-2 d-none d-md-inline">
+              <a href="#contact" class="btn btn-outline-light">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
+    <!-- main image & intro text -->
+    <section id="intro" class="mt-5 bg-light">
+      <div class="container-lg">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-md-5 text-center text-md-start">
+            <h1>
+              <div class="display-2">Lorem, ipsum.</div>
+              <div class="display-5 text-muted">Lorem, ipsum dolor.</div>
+            </h1>
+            <p class="lead my-4 text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+            <a href="#pricing" class="btn btn-dark btn-lg text-light"
+              >Buy Now</a
+            >
+          </div>
+
+          <!-- hero side image -->
+          <div class="col-md-5 text-center d-none d-md-block">
+            <img
+              class="img-fluid"
+              src="images/IMG_20191218_135131862.jpg"
+              alt="airplane"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
