--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
     <title>Turbine Solutions</title>
     <link rel="stylesheet" href="/css/main.min.css" />
     <link href="images/icons8-airplane-96.png" rel="icon" />
-    <style>
-      section {
-        padding: 60px 0;
-      }
-    </style>
+
   </head>
-  <body class="pt-3">
+  <body  style="min-height: 200vh">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-primary">
-      <div class="container-xxl pt-1 pb-1">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark">
+      <div class="container-xl">
         <a href="#intro" class="navbar-brand">
           <span class="fw-bold"> Turbine Solutions </span>
         </a>
@@ -35,14 +31,7 @@
 
         <!-- navbar links -->
         <div
-          class="
-            collapse
-            navbar-collapse
-            justify-content-end
-            align-center
-            pt-1
-            pb-1
-          "
+          class="collapse navbar-collapse justify-content-end align-center py-1"
           id="main-nav"
         >
           <ul class="navbar-nav">
@@ -59,46 +48,36 @@
               <a href="#contact" class="nav-link">Contact Us</a>
             </li>
             <li class="nav-item ms-2 d-none d-md-inline">
-              <a href="#contact" class="btn btn-outline-light">Contact Us</a>
+              <a href="#contact" class="btn btn-info text-light">Contact Us</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!-- main image & intro text -->
-    <section id="intro" class="mt-5 bg-light">
-      <div class="container-lg">
-        <div class="row justify-content-center align-items-center">
-          <div class="col-md-5 text-center text-md-start">
-            <h1>
-              <div class="display-2">Lorem, ipsum.</div>
-              <div class="display-5 text-muted">Lorem, ipsum dolor.</div>
-            </h1>
-            <p class="lead my-4 text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            </p>
-            <a href="#pricing" class="btn btn-dark btn-lg text-light"
-              >Buy Now</a
-            >
-          </div>
+    <!-- Hero Section-->
+    <section id="hero" class="text-light" >
+      <div class="px-4 py-5 text-center ">
+        <h1 class="display-5 fw-bold">Lorem Ipsum</h1>
+        <div class="col-lg-6 mx-auto">
+          
+          <p class="lead mb-4">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam maxime dolor aliquam, molestiae saepe est explicabo inventore soluta tempore cum officiis error porro odio dicta nostrum minima accusamus! Repellat sit culpa cumque tempore consectetur debitis, non aut provident in expedita.
+          </p>
 
-          <!-- hero side image -->
-          <div class="col-md-5 text-center d-none d-md-block">
-            <img
-              class="img-fluid"
-              src="images/IMG_20191218_135131862.jpg"
-              alt="airplane"
-            />
-          </div>
+          <button type="button" class="btn btn-info text-white btn-md px-4">
+            Get In Touch!
+          </button>
         </div>
       </div>
     </section>
-
+<!-- bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+  <!-- custom JS -->
+  <script src="custom.js"></script>
   </body>
 </html>
