--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
   <body  style="min-height: 200vh">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark ">
       <div class="container-xl">
-        <a href="#intro" class="navbar-brand">
+        <a href="#hero" class="navbar-brand">
           <span class="fw-bold"> Turbine Solutions </span>
         </a>
         <!-- toggle button for mobile nav -->
@@ -34,7 +34,7 @@
           class="collapse navbar-collapse justify-content-end align-center py-1"
           id="main-nav"
         >
-          <ul class="navbar-nav">
+          <ul class="navbar-nav gap-2">
             <li class="nav-item">
               <a href="#about" class="nav-link">About Us</a>
             </li>
@@ -56,13 +56,13 @@
     </nav>
 
     <!-- Hero Section-->
-    <section id="hero" class="text-light" >
-      <div class="px-4 py-5 text-center ">
+    <section id="hero" class="text-light pt-4" >
+      <div class="text-center container-fluid ">
         <h1 class="display-5 fw-bold">Lorem Ipsum</h1>
         <div class="col-lg-6 mx-auto">
           
           <p class="lead mb-4">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam maxime dolor aliquam, molestiae saepe est explicabo inventore soluta tempore cum officiis error porro odio dicta nostrum minima accusamus! Repellat sit culpa cumque tempore consectetur debitis, non aut provident in expedita.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam maxime dolor aliquam, molestiae saepe est explicabo inventore soluta tempore
           </p>
 
           <button type="button" class="btn btn-info text-white btn-md px-4">
@@ -71,6 +71,38 @@
         </div>
       </div>
     </section>
+
+
+<!-- ABOUT US  -->
+<section id="about" class="py-5 bg-white">
+  <div class="container-lg">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-md-5 text-center text-md-start">
+        <!-- <h1>
+          <div class="lead  text-muted">About</div>
+        </h1> -->
+        <p class=" display-6">
+          Lorem, ipsum dolor.
+        </p>
+        <p class="lead text-muted">Nulla vel sodales tellus, quis condimentum enim. Nunc porttitor venenatis feugiat. Etiam quis faucibus erat, non accumsan leo. Aliquam erat volutpat. Vestibulum ac faucibus eros. Cras ullamcorper gravida tellus ut consequat.</p>
+        <a href="#" class="btn btn-primary btn-md mt-md-0 mb-4">Learn More</a>
+      </div>
+     
+      <div class="col-md-5 text-center ">
+          <img
+            class="img-fluid rounded-2"
+            src="images/cessna-g5e70193e1_1280.jpg"
+            alt="ebook-cover"
+        /></span>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- SERVICES -->
+<section id="services">
+
+</section>
 <!-- bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
