--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turbine Solutions</title>
-    <link rel="stylesheet" href="https://github.com/hmarin7755/Turbine-Solutions/css/main.min.css" />
+    <link rel="stylesheet" href="/css/main.min.css" />
     <link href="images/icons8-airplane-96.png" rel="icon" />
 
   </head>
-  <body>
+  <body  style="min-height: 200vh">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md fixed-top navbar-dark ">
       <div class="container-xl">
