change background img

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <img
             class="img-fluid rounded-2"
             src="images/cessna-g5e70193e1_1280.jpg"
-            alt="ebook-cover"
+            alt="cessna airplane"
         /></span>
       </div>
     </div>
