--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turbine Solutions</title>
-    <link rel="stylesheet" href="https://hmarin7755.github.io/Turbine-Solutions/css/main.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/main.min.css" type="text/css" />
     <link href="images/icons8-airplane-96.png" rel="icon" />
 
   </head>
