resize about us section and change heading colors

--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
 <section id="about" class="py-5 bg-white">
   <div class="container-lg">
     <div class="row justify-content-center align-items-center">
-      <div class="col-md-5 text-center text-md-start">
+      <div class="col-md-6 text-center text-md-start">
         <!-- <h1>
           <div class="lead  text-muted">About</div>
         </h1> -->
-        <p class=" display-6">
+        <p class="display-6 text-altdark">
           Lorem, ipsum dolor.
         </p>
-        <p class="lead text-muted">Nulla vel sodales tellus, quis condimentum enim. Nunc porttitor venenatis feugiat. Etiam quis faucibus erat, non accumsan leo. Aliquam erat volutpat. Vestibulum ac faucibus eros. Cras ullamcorper gravida tellus ut consequat.</p>
-        <a href="#" class="btn btn-primary btn-md mt-md-0 mb-4">Learn More</a>
+        <p class="lead">Nulla vel sodales tellus, quis condimentum enim. Nunc porttitor venenatis feugiat. Etiam quis faucibus erat, non accumsan leo. Aliquam erat volutpat. Vestibulum ac faucibus eros. Cras ullamcorper gravida tellus ut consequat.</p>
+        <a href="#" class="btn btn-primary btn-md mt-md-0 mb-4 ">Learn More</a>
       </div>
      
-      <div class="col-md-5 text-center ">
+      <div class="col-md-6 text-center ">
           <img
             class="img-fluid rounded-2"
             src="images/cessna-g5e70193e1_1280.jpg"
@@ -100,7 +100,13 @@
 </section>
 
 <!-- SERVICES -->
-<section id="services" class="bg-light">
+<section id="services" class="bg-light py-4">
+  <div class="container-lg">
+    <div class="text-center">
+      <h2 class="text-altdark">Our Services</h2>
+      <p class="lead text-dark">Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+    </div>
+  </div>
 
 </section>
 <!-- bootstrap JS -->
