--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>Turbine Solutions</title>
     <link rel="stylesheet" href="css/main.min.css" type="text/css" />
     <link href="images/icons8-airplane-96.png" rel="icon" />
-
   </head>
-  <body  style="min-height: 200vh">
+  <body style="min-height: 200vh">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark ">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark">
       <div class="container-xl">
         <a href="#hero" class="navbar-brand">
           <span class="fw-bold"> Turbine Solutions </span>
@@ -36,11 +35,12 @@
         >
           <ul class="navbar-nav gap-2">
             <li class="nav-item">
-              <a href="#about" class="nav-link">About Us</a>
-            </li>
-            <li class="nav-item">
               <a href="#services" class="nav-link">Services</a>
             </li>
+            <li class="nav-item">
+              <a href="#about" class="nav-link">About Us</a>
+            </li>
+
             <li class="nav-item">
               <a href="#projects" class="nav-link">Projects</a>
             </li>
@@ -56,13 +56,14 @@
     </nav>
 
     <!-- Hero Section-->
-    <section id="hero" class="text-light pt-4" >
-      <div class="text-center container-fluid ">
+    <section id="hero" class="text-light pt-4">
+      <div class="text-center container-fluid">
         <h1 class="display-5 fw-bold">Lorem Ipsum</h1>
         <div class="col-lg-6 mx-auto">
-          
           <p class="lead mb-4">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam maxime dolor aliquam, molestiae saepe est explicabo inventore soluta tempore
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
+            maxime dolor aliquam, molestiae saepe est explicabo inventore soluta
+            tempore
           </p>
 
           <button type="button" class="btn btn-info text-white btn-md px-4">
@@ -72,50 +73,54 @@
       </div>
     </section>
 
-
-<!-- ABOUT US  -->
-<section id="about" class="py-5 bg-white">
-  <div class="container-lg">
-    <div class="row justify-content-center align-items-center">
-      <div class="col-md-6 text-center text-md-start">
-        <!-- <h1>
-          <div class="lead  text-muted">About</div>
-        </h1> -->
-        <p class="display-6 text-altdark">
-          Lorem, ipsum dolor.
-        </p>
-        <p class="lead">Nulla vel sodales tellus, quis condimentum enim. Nunc porttitor venenatis feugiat. Etiam quis faucibus erat, non accumsan leo. Aliquam erat volutpat. Vestibulum ac faucibus eros. Cras ullamcorper gravida tellus ut consequat.</p>
-        <a href="#" class="btn btn-primary btn-md mt-md-0 mb-4 ">Learn More</a>
+    <!-- SERVICES -->
+    <section id="services" class="bg-light py-5">
+      <div class="container-lg">
+        <div class="text-center">
+          <h2 class="text-altdark">Our Services</h2>
+          <p class="lead text-dark">
+            Lorem, ipsum dolor sit amet consectetur adipisicing.
+          </p>
+        </div>
       </div>
-     
-      <div class="col-md-6 text-center ">
-          <img
-            class="img-fluid rounded-2"
-            src="images/cessna-g5e70193e1_1280.jpg"
-            alt="cessna airplane"
-        /></span>
+    </section>
+
+    <!-- ABOUT US  -->
+    <section id="about" class="py-5 bg-white">
+      <div class="container-lg">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-md-6 py-md-5 d-none d-md-block">
+            <img
+              class="img-fluid rounded-2"
+              src="images/cessna-g5e70193e1_1280.jpg"
+              alt="cessna airplane"
+            />
+          </div>
+          <div class="col-md-6 text-center text-md-start">
+            <h1>
+              <div class="lead text-muted">About Us</div>
+            </h1>
+            <p class="display-6 text-altdark">Lorem ipsum dolor sit amet.</p>
+            <p class="lead">
+              Nulla vel sodales tellus, quis condimentum enim. Nunc porttitor
+              venenatis feugiat. Etiam quis faucibus erat, non accumsan leo.
+              Aliquam erat volutpat. Vestibulum ac faucibus eros. Cras
+              ullamcorper gravida tellus ut consequat.
+            </p>
+            <a href="#" class="btn btn-primary btn-md mt-md-0 mb-4"
+              >Learn More</a
+            >
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
-
-<!-- SERVICES -->
-<section id="services" class="bg-light py-4">
-  <div class="container-lg">
-    <div class="text-center">
-      <h2 class="text-altdark">Our Services</h2>
-      <p class="lead text-dark">Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-    </div>
-  </div>
-
-</section>
-<!-- bootstrap JS -->
+    </section>
+    <!-- bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-  <!-- custom JS -->
-  <script src="custom.js"></script>
+    <!-- custom JS -->
+    <script src="custom.js"></script>
   </body>
 </html>
