change image locations on homepage

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a href="#contact" class="nav-link">Contact Us</a>
             </li>
             <li class="nav-item ms-2 d-none d-md-inline">
-              <a href="#contact" class="btn btn-info text-light">Contact Us</a>
+              <a href="#contact" class="btn btn-info text-white">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -89,10 +89,10 @@
     <section id="about" class="py-5 bg-white">
       <div class="container-lg">
         <div class="row justify-content-center align-items-center">
-          <div class="col-md-6 py-md-5 d-none d-md-block">
+          <div class="col-md-6 py-md-5 py-2 d-none d-md-block">
             <img
               class="img-fluid rounded-2"
-              src="images/cessna-g5e70193e1_1280.jpg"
+              src="images/king-air.jpg"
               alt="cessna airplane"
             />
           </div>
@@ -111,6 +111,7 @@
               >Learn More</a
             >
           </div>
+        
         </div>
       </div>
     </section>
