--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 
     <!-- Hero Section-->
-    <section id="hero" class="text-light pt-4">
+    <section id="hero" class="text-white pt-4">
       <div class="text-center container-fluid">
         <h1 class="display-5 fw-bold">Lorem Ipsum</h1>
         <div class="col-lg-6 mx-auto">
