added images and cards for services section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="#services" class="nav-link">Services</a>
             </li>
             <li class="nav-item">
-              <a href="#about" class="nav-link">About Us</a>
+              <a href="#about" class="nav-link">About</a>
             </li>
 
             <li class="nav-item">
@@ -58,7 +58,7 @@
     <!-- Hero Section-->
     <section id="hero" class="text-white pt-4">
       <div class="text-center container-fluid">
-        <h1 class="display-5 fw-bold">Lorem Ipsum</h1>
+        <h1 class="display-5 fw-bold">Lorem ipsum dolor sit amet.</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
@@ -74,7 +74,7 @@
     </section>
 
     <!-- SERVICES -->
-    <section id="services" class="bg-light py-5">
+    <section id="services" class="bg-white py-5">
       <div class="container-lg">
         <div class="text-center">
           <h2 class="text-altdark">Our Services</h2>
@@ -82,17 +82,120 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing.
           </p>
         </div>
+
+        <div class="row row-cols-2 row-cols-md-3 g-3 g-md-4 pt-4">
+          <div class="col">
+            <div class="card shadow-sm">
+              <img
+                src="images/cockpit-6381367_1920.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Obcaecati, perspiciatis veniam labore et sapiente magni quidem
+                  sequi aliq
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <img
+                src="images/turbine-590354_1920.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. O
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <img
+                src="images/biplane-ga1cc6382f_1920.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Obcaecati, perspiciatis veniam labore et sapiente magni quidem
+                  sequi aliquam
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <img
+                src="images/engine-gbcdd1ad48_1920.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Obcaecati, perspiciatis veniam labore et sapiente magni quidem
+                  sequi aliquam similique, quas ipsam? Quo, delectus!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <img
+                src="images/main-landing-gear-1461139.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Obcaecati, perspiciatis veniam labore et sapiente magni quidem
+                  sequi aliquam similique, quas ipsam? Quo, delectus!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <img
+                src="images/airplane-905532_1920.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Obcaecati, perspiciatis veniam labore et sapiente magni quidem
+                  sequi aliquam similique, quas ipsam? Quo, delectus!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
     <!-- ABOUT US  -->
-    <section id="about" class="py-5 bg-white">
+    <section id="about" class="py-5 bg-light">
       <div class="container-lg">
         <div class="row justify-content-center align-items-center">
           <div class="col-md-6 py-md-5 py-2 d-none d-md-block">
             <img
-              class="img-fluid rounded-2"
-              src="images/king-air.jpg"
+              class="img-fluid rounded-2 shadow-sm"
+              src="images/westwind-air-service-yRp1lQSnbk0-unsplash.jpg"
               alt="cessna airplane"
             />
           </div>
@@ -111,7 +214,6 @@
               >Learn More</a
             >
           </div>
-        
         </div>
       </div>
     </section>
