change bg colors for sections and add gap in about

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="#services" class="nav-link">Services</a>
             </li>
             <li class="nav-item">
-              <a href="#about" class="nav-link">About</a>
+              <a href="#about" class="nav-link">About Us</a>
             </li>
 
             <li class="nav-item">
@@ -74,7 +74,7 @@
     </section>
 
     <!-- SERVICES -->
-    <section id="services" class="bg-white py-5">
+    <section id="services" class="bg-light py-5">
       <div class="container-lg">
         <div class="text-center">
           <h2 class="text-altdark">Our Services</h2>
@@ -189,9 +189,9 @@
     </section>
 
     <!-- ABOUT US  -->
-    <section id="about" class="py-5 bg-light">
+    <section id="about" class="py-5 bg-white">
       <div class="container-lg">
-        <div class="row justify-content-center align-items-center">
+        <div class="row justify-content-center align-items-center g-md-5">
           <div class="col-md-6 py-md-5 py-2 d-none d-md-block">
             <img
               class="img-fluid rounded-2 shadow-sm"
