make images the same size in cards + remove shadow

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="row row-cols-2 row-cols-md-3 g-3 g-md-4 pt-4">
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card">
               <img
                 src="images/cockpit-6381367_1920.jpg"
                 class="card-img-top"
@@ -102,7 +102,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card">
               <img
                 src="images/turbine-590354_1920.jpg"
                 class="card-img-top"
@@ -117,7 +117,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card">
               <img
                 src="images/biplane-ga1cc6382f_1920.jpg"
                 class="card-img-top"
@@ -134,7 +134,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card">
               <img
                 src="images/engine-gbcdd1ad48_1920.jpg"
                 class="card-img-top"
@@ -151,7 +151,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card">
               <img
                 src="images/main-landing-gear-1461139.jpg"
                 class="card-img-top"
@@ -168,7 +168,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card">
               <img
                 src="images/airplane-905532_1920.jpg"
                 class="card-img-top"
