--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turbine Solutions</title>
     <link rel="stylesheet" href="css/main.min.css" type="text/css" />
+
     <link href="images/icons8-airplane-96.png" rel="icon" />
   </head>
   <body style="min-height: 200vh">
@@ -74,7 +75,7 @@
     </section>
 
     <!-- SERVICES -->
-    <section id="services" class="bg-light py-5">
+    <section id="services" class="bg-white py-5">
       <div class="container-lg">
         <div class="text-center">
           <h2 class="text-altdark">Our Services</h2>
@@ -83,7 +84,7 @@
           </p>
         </div>
 
-        <div class="row row-cols-2 row-cols-md-3 g-3 g-md-4 pt-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4 py-4">
           <div class="col">
             <div class="card">
               <img
@@ -92,7 +93,7 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title text-altdark">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -109,7 +110,7 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title text-altdark">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. O
                 </p>
@@ -124,7 +125,7 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title text-altdark">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -141,7 +142,7 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title text-altdark">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -158,7 +159,7 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title text-altdark">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -175,7 +176,7 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title text-altdark">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -189,9 +190,9 @@
     </section>
 
     <!-- ABOUT US  -->
-    <section id="about" class="py-5 bg-white">
+    <section id="about" class="py-5 bg-light">
       <div class="container-lg">
-        <div class="row justify-content-center align-items-center g-md-5">
+        <div class="row justify-content-center align-items-center g-md-4">
           <div class="col-md-6 py-md-5 py-2 d-none d-md-block">
             <img
               class="img-fluid rounded-2 shadow-sm"
@@ -201,7 +202,7 @@
           </div>
           <div class="col-md-6 text-center text-md-start">
             <h1>
-              <div class="lead text-muted">About Us</div>
+              <div class="lead text-info">About Us</div>
             </h1>
             <p class="display-6 text-altdark">Lorem ipsum dolor sit amet.</p>
             <p class="lead">
@@ -217,6 +218,100 @@
         </div>
       </div>
     </section>
+
+    <!-- FOOTER -->
+    <footer class="text-center bg-altdark text-white pt-1">
+      <!-- Section: Links  -->
+      <div class="container text-center text-md-start mt-5">
+        <!-- Grid row -->
+        <div class="row">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-5 col-xl-3 mb-4">
+            <!-- Content -->
+            <h6 class="text-uppercase fw-bold mb-3 mx-auto">
+              Turbine Solutions
+            </h6>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequatur laudantium aspernatur aliquid, quibusdam quis facere.
+            </p>
+
+            <i class="fa-brands fa-facebook-f mx-1"></i>
+            <i class="fa-brands fa-linkedin mx-1"></i>
+            <i class="fa-brands fa-instagram mx-1"></i>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-2 col-md-2 col-lg-2 col-xl-2 mb-4 mx-auto">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-3">Services</h6>
+            <p>
+              <a href="#!" class="text-muted">Link</a>
+            </p>
+            <p>
+              <a href="#!" class="text-muted">Link</a>
+            </p>
+            <p>
+              <a href="#!" class="text-muted">Link</a>
+            </p>
+            <p>
+              <a href="#!" class="text-muted">Link</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-2 col-md-3 col-lg-2 col-xl-2 mb-4 mx-auto">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-3">Browse</h6>
+            <p>
+              <a href="#!" class="text-muted">Home</a>
+            </p>
+            <p>
+              <a href="#!" class="text-muted">About Us</a>
+            </p>
+            <p>
+              <a href="#!" class="text-muted">Projects</a>
+            </p>
+            <p>
+              <a href="#!" class="text-muted">Services</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mb-md-0 mb-4 mx-auto">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-3">Contact</h6>
+            <p>
+              <i class="fa-solid fa-location-dot text-muted me-2"></i> New York,
+              NY 10012, US
+            </p>
+            <p>
+              <i class="fas fa-envelope me-2 text-secondary"></i>
+              info@example.com
+            </p>
+            <p>
+              <i class="fas fa-phone me-2 text-secondary"></i> + 01 234 567 88
+            </p>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+
+      <!-- Section: Links  -->
+
+      <!-- Copyright -->
+      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1)">
+        © 2023 Copyright:
+        <a class="text-reset fw-bold" href="#">Turbine Solutions</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+
     <!-- bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -225,5 +320,10 @@
     ></script>
     <!-- custom JS -->
     <script src="custom.js"></script>
+    <!-- font awesome icons -->
+    <script
+      src="https://kit.fontawesome.com/581a84b058.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
