change border on cards in services section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="#projects" class="nav-link">Projects</a>
+              <a href="#gallery" class="nav-link">Gallery</a>
             </li>
             <li class="nav-item d-md-none">
               <a href="#contact" class="nav-link">Contact Us</a>
@@ -86,14 +86,14 @@
 
         <div class="row row-cols-1 row-cols-md-3 g-4 py-4">
           <div class="col">
-            <div class="card">
+            <div class="card border-0 shadow rounded-0 ">
               <img
                 src="images/cockpit-6381367_1920.jpg"
-                class="card-img-top"
+                class="card-img-top rounded-0"
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title text-altdark">Card title</h5>
+                <h5 class="card-title text-altdark ">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -103,29 +103,29 @@
             </div>
           </div>
           <div class="col">
-            <div class="card">
+            <div class="card border-0 shadow rounded-0 ">
               <img
                 src="images/turbine-590354_1920.jpg"
-                class="card-img-top"
+                class="card-img-top rounded-0"
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title text-altdark">Card title</h5>
+                <h5 class="card-title text-altdark ">Card title</h5>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. O
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 </p>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card">
+            <div class="card border-0 shadow rounded-0">
               <img
                 src="images/biplane-ga1cc6382f_1920.jpg"
-                class="card-img-top"
+                class="card-img-top rounded-0"
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title text-altdark">Card title</h5>
+                <h5 class="card-title text-altdark ">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -135,10 +135,10 @@
             </div>
           </div>
           <div class="col">
-            <div class="card">
+            <div class="card border-0 shadow rounded-0 ">
               <img
                 src="images/engine-gbcdd1ad48_1920.jpg"
-                class="card-img-top"
+                class="card-img-top rounded-0"
                 alt="..."
               />
               <div class="card-body">
@@ -152,10 +152,10 @@
             </div>
           </div>
           <div class="col">
-            <div class="card">
+            <div class="card border-0 shadow rounded-0 ">
               <img
                 src="images/main-landing-gear-1461139.jpg"
-                class="card-img-top"
+                class="card-img-top rounded-0"
                 alt="..."
               />
               <div class="card-body">
@@ -169,14 +169,14 @@
             </div>
           </div>
           <div class="col">
-            <div class="card">
+            <div class="card border-0 shadow rounded-0 ">
               <img
                 src="images/airplane-905532_1920.jpg"
-                class="card-img-top"
+                class="card-img-top rounded-0"
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title text-altdark">Card title</h5>
+                <h5 class="card-title text-altdark ">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -219,9 +219,27 @@
       </div>
     </section>
 
+
+
+<!-- GALLERY/PORTFOLIO -->
+<section id="gallery" class="py-5 bg-white">
+  <div class="container-lg">
+    <div class="">
+  
+
+  </div>
+</section>
+
+
+
+
+
+
+
+
     <!-- FOOTER -->
     <footer class="text-center bg-altdark text-white pt-1">
-      <!-- Section: Links  -->
+    
       <div class="container text-center text-md-start mt-5">
         <!-- Grid row -->
         <div class="row">
@@ -240,52 +258,52 @@
             <i class="fa-brands fa-linkedin mx-1"></i>
             <i class="fa-brands fa-instagram mx-1"></i>
           </div>
-          <!-- Grid column -->
+          <!-- /Grid column -->
 
           <!-- Grid column -->
           <div class="col-2 col-md-2 col-lg-2 col-xl-2 mb-4 mx-auto">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-3">Services</h6>
             <p>
-              <a href="#!" class="text-muted">Link</a>
+              <a href="#!" class="text-light">Link</a>
             </p>
             <p>
-              <a href="#!" class="text-muted">Link</a>
+              <a href="#!" class="text-light">Link</a>
             </p>
             <p>
-              <a href="#!" class="text-muted">Link</a>
+              <a href="#!" class="text-light">Link</a>
             </p>
             <p>
-              <a href="#!" class="text-muted">Link</a>
+              <a href="#!" class="text-light">Link</a>
             </p>
           </div>
-          <!-- Grid column -->
+          <!-- /Grid column -->
 
           <!-- Grid column -->
           <div class="col-2 col-md-3 col-lg-2 col-xl-2 mb-4 mx-auto">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-3">Browse</h6>
             <p>
-              <a href="#!" class="text-muted">Home</a>
+              <a href="#!" class="text-light">Home</a>
             </p>
             <p>
-              <a href="#!" class="text-muted">About Us</a>
+              <a href="#!" class="text-light">About Us</a>
             </p>
             <p>
-              <a href="#!" class="text-muted">Projects</a>
+              <a href="#!" class="text-light">Gallery</a>
             </p>
             <p>
-              <a href="#!" class="text-muted">Services</a>
+              <a href="#!" class="text-light">Services</a>
             </p>
           </div>
-          <!-- Grid column -->
+          <!-- /Grid column -->
 
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mb-md-0 mb-4 mx-auto">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-3">Contact</h6>
             <p>
-              <i class="fa-solid fa-location-dot text-muted me-2"></i> New York,
+              <i class="fa-solid fa-location-dot text-secondary me-2"></i> New York,
               NY 10012, US
             </p>
             <p>
@@ -296,12 +314,11 @@
               <i class="fas fa-phone me-2 text-secondary"></i> + 01 234 567 88
             </p>
           </div>
-          <!-- Grid column -->
+          <!-- /Grid column -->
         </div>
-        <!-- Grid row -->
+        <!-- /Grid row -->
       </div>
 
-      <!-- Section: Links  -->
 
       <!-- Copyright -->
       <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1)">
